# html-email-generator

./: .gitignore  .releaserc  CHANGELOG.md  LICENSE  NOTICE  README.md  RELEASE_NOTES.md  changelog.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: release.yml  release_package.yaml  test_package.yaml
emailer/: cli.py  generator.py
samples/: corporate_announcement.yaml  example_release.yaml  functionality.yaml  general_comms.yaml  marketing_sample.yaml  marketing_watch.yaml
src/main/: main.py
src/main/config/: contents.yaml  general_comms.yaml  sample_1.yaml  sample_2.yaml
src/main/utils/: email_html_generator.py
src/test/unittests/: test_email_html_generator.py
src/test/unittests/main/: main.py
src/test/unittests/main/config/: contents.yaml  general_comms.yaml  release.yaml
src/test/unittests/main/utils/: email_html_generator.py
src/tests/unittests/: test_email_html_generator.py
src/tests/unittests/main/config/: contents.yaml  general_comms.yaml  newsletter.yaml  release.yaml
tests/unittests/: test_email_html_generator.py
